--- a/style.css
+++ b/style.css
@@ -1,294 +1,105 @@
-@import url(https://fonts.googleapis.com/css?family=Bree+Serif);
-
-::selection {
-    color: #fff;
-    background: #f676b2;
-    /* Safari */
-}
-
-::-moz-selection {
-    color: #fff;
-    background: #f676b2;
-   
-
-
-    margin: 0;
-    padding: 0;
-    border: none;
-    outline: none;
-}
-
-body {
-    background: url('http://www.demo.amitjakhu.com/login-form/images/bg.png');
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    font-weight: 300;
-    text-align: left;
-    text-decoration: none;
-    height: 500px;
-}
-
-#wrapper {
-   
-    width: 300px;
-    height: 400px;
-    margin: 70px auto;
-}
-
-
-
-
-.download {
-    display: block;
-    position: absolute;
-    float: right;
-    right: 25px;
-    bottom: 25px;
-    padding: 5px;
-    font-weight: bold;
-    font-size: 11px;
-    text-align: right;
-    text-decoration: none;
-    color: rgba(0, 0, 0, 0.5);
-    text-shadow: 1px 1px 0 rgba(256, 256, 256, 0.5);
-}
-
-.download:hover {
-    color: rgba(0, 0, 0, 0.75);
-    text-shadow: 1px 1px 0 rgba(256, 256, 256, 0.5);
-}
-
-.download:focus {
-    bottom: 24px;
-}
-
-
-	width: 600px;
-	height: 600px;
-	position: fixed;
-	left: 50%;
-	top: 50%;
-	margin-left: -300px;
-	margin-top: -300px;
-	
-	background: url(http://www.demo.amitjakhu.com/login-form/images/gradient.png) no-repeat;
-
-.gradient {
-    
-    width: 600px;
-    height: 600px;
-    position: fixed;
-    left: 50%;
-    top: 50%;
-    margin-left: -300px;
-    margin-top: -300px;
-    z-index: -2;
-
-    background-image: url(http://www.demo.amitjakhu.com/login-form/images/gradient.png);
-    background-repeat: no-repeat;
-
-    background-image: -webkit-gradient(radial, 0% 0%, 0% 100%, from(rgba(213, 246, 255, 1)), to(rgba(213, 246, 255, 0)));
-    background-image: -webkit-radial-gradient(50% 50%, 40% 40%, rgba(213, 246, 255, 1), rgba(213, 246, 255, 0));
-    background-image: -moz-radial-gradient(50% 50%, 50% 50%, rgba(213, 246, 255, 1), rgba(213, 246, 255, 0));
-    background-image: -ms-radial-gradient(50% 50%, 50% 50%, rgba(213, 246, 255, 1), rgba(213, 246, 255, 0));
-    background-image: -o-radial-gradient(50% 50%, 50% 50%, rgba(213, 246, 255, 1), rgba(213, 246, 255, 0));
-}
-
-
-
-
-.login-form {
-    width: 300px;
-    margin: 0 auto;
-    position: relative;
-    background: #f3f3f3;
-    border: 1px solid #fff;
-    border-radius: 5px;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
-    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
-    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
-}
-
-
-
-.login-form .header {
-    padding: 40px 30px 30px 30px;
-}
-
-.login-form .header h1 {
-    font-family: 'Bree Serif', serif;
-    font-weight: 300;
-    font-size: 28px;
-    line-height: 34px;
-    color: #414848;
-    text-shadow: 1px 1px 0 rgba(256, 256, 256, 1.0);
-    margin-bottom: 10px;
-}
-
-.login-form .header span {
-    font-size: 11px;
-    line-height: 16px;
-    color: #678889;
-    text-shadow: 1px 1px 0 rgba(256, 256, 256, 1.0);
-}
-
-
-.login-form .content {
-    padding: 0 30px 25px 30px;
-}
-
-
-/* Input field */
-
-.login-form .content .input {
-    width: 188px;
-    padding: 15px 25px;
-    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    color: #9d9e9e;
-    text-shadow: 1px 1px 0 rgba(256, 256, 256, 1.0);
-    background: #fff;
-    border: 1px solid #fff;
-    border-radius: 5px;
-    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.50);
-    -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.50);
-    -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.50);
-}
-
-
-
-
-.login-form .content .password,
-.login-form .content .pass-icon {
-    margin-top: 25px;
-}
-
-.login-form .content .input:hover {
-    background: #dfe9ec;
-    color: #414848;
-}
-
-.login-form .content .input:focus {
-    background: #dfe9ec;
-    color: #414848;
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.25);
-    -moz-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.25);
-    -webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.25);
-}
-
-.user-icon,
-.pass-icon {
-    width: 46px;
-    height: 47px;
-    display: block;
-    position: absolute;
-    left: 0px;
-    padding-right: 2px;
-    z-index: -1;
-    -moz-border-radius-topleft: 5px;
-    -moz-border-radius-bottomleft: 5px;
-    -webkit-border-top-left-radius: 5px;
-    -webkit-border-bottom-left-radius: 5px;
-}
-
-.user-icon {
-    top: 153px;
-    /* Positioning fix for slide-in, got lazy to think up of simpler method. */
-    background: rgba(65, 72, 72, 0.75) url(http://www.demo.amitjakhu.com/login-form/images/user-icon.png) no-repeat center;
-}
-
-.pass-icon {
-    top: 201px;
-    background: rgba(65, 72, 72, 0.75) url(http://www.demo.amitjakhu.com/login-form/images/pass-icon.png) no-repeat center;
-}
-
-.content input:focus+div {
-    left: -46px;
-}
-
-
-
-.input,
-.user-icon,
-.pass-icon,
-.button,
-.register {
-    transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -webkit-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    -ms-transition: all 0.5s ease;
-}
-
-
-
-.login-form .footer {
-    padding: 25px 30px 40px 30px;
-    overflow: auto;
-    background: #d4dedf;
-    border-top: 1px solid #fff;
-    box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.15);
-    -moz-box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.15);
-    -webkit-box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.15);
-}
-
-.login-form .footer .button {
-    float: right;
-    padding: 11px 25px;
-    font-family: 'Bree Serif', serif;
-    font-weight: 300;
-    font-size: 18px;
-    color: #fff;
-    text-shadow: 0px 1px 0 rgba(0, 0, 0, 0.25);
-    background: #56c2e1;
-    border: 1px solid #46b3d3;
-    border-radius: 5px;
-    cursor: pointer;
-    box-shadow: inset 0 0 2px rgba(256, 256, 256, 0.75);
-    -moz-box-shadow: inset 0 0 2px rgba(256, 256, 256, 0.75);
-    -webkit-box-shadow: inset 0 0 2px rgba(256, 256, 256, 0.75);
-}
-
-.login-form .footer .button:hover {
-    background: #3f9db8;
-    border: 1px solid rgba(256, 256, 256, 0.75);
-    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
-    -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
-    -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
-}
-
-.login-form .footer .button:focus {
-    position: relative;
-    bottom: -1px;
-    background: #56c2e1;
-    box-shadow: inset 0 1px 6px rgba(256, 256, 256, 0.75);
-    -moz-box-shadow: inset 0 1px 6px rgba(256, 256, 256, 0.75);
-    -webkit-box-shadow: inset 0 1px 6px rgba(256, 256, 256, 0.75);
-}
-
-
-
-
-.login-form .footer .register {
-    display: block;
-    float: right;
-    padding: 10px;
-    margin-right: 20px;
-    background: none;
-    border: none;
-    cursor: pointer;
-    font-family: 'Bree Serif', serif;
-    font-weight: 300;
-    font-size: 18px;
-    color: #414848;
-    text-shadow: 0px 1px 0 rgba(256, 256, 256, 0.5);
-}
-
-.login-form .footer .register:hover {
-    color: #3f9db8;
-}
-
-.login-form .footer .register:focus {
-    position: relative;
-    bottom: -1px;
-}
+ * {
+     margin: 0;
+     padding: 0;
+     box-sizing: border-box;
+     font-family: 'Montserrat', sans-serif;
+ }
+ 
+ .site-header {
+     width: 100%;
+     height: 100vh;
+     background: #0f8a9d;
+     background: linear-gradient(57deg, #00C6A7, #1E4D92);
+     clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+ }
+ 
+ nav {
+     width: 100%;
+     height: 100px;
+     /*background-color:  red;*/
+     display: flex;
+     color: white;
+ }
+ 
+ .logo {
+     width: 50%;
+     height: 100px;
+ }
+ 
+ .logo h1 {
+     line-height: 100px;
+     padding-left: 50px;
+ }
+ 
+ .menu {
+     width: 50%;
+     height: 100px;
+ }
+ 
+ .menu ul {
+     width: 100%;
+     height: 100px;
+     display: flex;
+     flex-direction: row;
+     justify-content: space-around;
+     align-items: center;
+ }
+ 
+ .menu ul li {
+     list-style: none;
+     font-size: 12px;
+     font-weight: bold;
+     text-transform: uppercase;
+ }
+ 
+ section {
+     display: flex;
+ }
+ 
+ .leftside {
+     width: 45%;
+     height: auto;
+     overflow: hidden;
+     margin-top: 20px;
+ }
+ 
+ .leftside img {
+     width: 600px;
+     height: 500px;
+ }
+ 
+ .rightside {
+     width: 55%;
+     height: 300px;
+     color: white;
+     text-align: center;
+     margin-top: 80px;
+     padding: 40px;
+ }
+ 
+ .rightside h1 {
+     text-align: center;
+     color: #ffffff;
+     font-size: 50px;
+     font-weight: 900;
+     text-transform: uppercase;
+ }
+ 
+ .rightside p {
+     font-size: 1.1rem;
+     padding: 30px 0;
+ }
+ 
+ .rightside button {
+     font-size: 17px;
+     font-weight: 600;
+     color: white;
+     text-transform: uppercase;
+     background: linear-gradient(57deg, #00C6A7, #1E4D92);
+     border-radius: 4px 4px 4px 4px;
+     padding: 20px 35px;
+ }
+ 
+ .rightside button:hover {
+     background: linear-gradient(57deg, #1E4D92, #00C6A7);
+ }
